--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,9 @@ copy.src.files=false
 copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\Teszt feladat - Developro
 hostname=localhost
+index.file=artisan
 port=8000
 router=php artisan serve
-run.as=INTERNAL
+run.as=SCRIPT
+script.arguments=serve
 url=http://localhost:8000/
